--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/dbtest?autoReconnect=true&useSSL=false
+#spring.datasource.url= jdbc:mysql://localhost:3306/dbtest
 spring.datasource.username=root
 spring.datasource.password=1614-dev
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+#--server.port=$PORT
